gcc/testsuite/rust/rustc/ui/parser/issues/issue-113110-non-item-at-module-root.rs
 5 // { dg-error "" "" { target *-*-* } }

